<resources>

    <string name="app_name">SilentZio</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_call__manager">SilentZio</string>
    <string name="Active">Activate</string>
    <string name="Deactive">Deactivate</string>
    <string name="None">None</string>
    <string name="Upcoming">Upcoming Events</string>
    <string name="Keyword">Add Keyword Here</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="dark">Change to Dark Theme</string>
    <string name="light">Change to Light Theme</string>
    <string name="on">Activte</string>
    <string name="off">In-Active</string>
    <string name="about">About</string>
    <string name="author">Author: AsyncTech.™</string>    
    <string name="name">SilentZio</string>
    <string name="ver"> v1.1.1</string>
    <string name="web"><a href="http://www.facebook.com/asynctech">Webpage</a></string>
    <string name="copyright">Copyright © 2012 AsyncTech.™</string>
    <string name="released">Published By: Web &amp; Coding Club, IIT Guwahati</string>
    <string name="sms">Send SMS</string>
    <string name="wel">Don\'t display this again</string>    
    <string name="default_checked">Checked by default:</string>
    <string name="already">List of Added Filters</string>
	<string name="instruction0">&#9830; Appliation will start managing your calls only when the toggle button is toggled to "Active" State.</string>
    <string name="instruction1">&#9830; Events are synced from the default calendar of the phone. Events containing filter keywords in event title (or #silent in description) will trigger the app to silence a call during the event and send an SMS to the caller during the event.</string>
    <string name="instruction2">&#9830; You can add/remove filter keywords from the app menu.</string>
    <string name="instruction3">&#9830; Uncheck the Send SMS box if you don&#8242;t want to send an SMS to the caller when you are busy. The application will only put your phone into silent mode in this situation.</string>
    <string name="instruction">Instruction</string>
    <string name="welcome">Welcome</string>
    <drawable name="Image">#FFFFFF</drawable>


</resources>