<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tx0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#E4E4E4" />

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tx0" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx0"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/instruction0"
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/tx2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/txt1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/instruction1"
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx2"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/instruction2"
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/tx3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/txt2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/instruction3"
                android:textColor="#D4D4D4" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>