<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.iitg.call.manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tx0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Upcoming"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#E4E4E4" />

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/cbSms"
        android:layout_below="@+id/tx0" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tx1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/None"
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/tx2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/txt1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx2"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/tx3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/txt2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx3"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/tx4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/txt3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx4"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/tx5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/txt4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#D4D4D4" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tx0"
                android:layout_below="@+id/tx5"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="#D4D4D4" />
        </RelativeLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/cbSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tgState"
        android:layout_alignLeft="@+id/tx0"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:checked="true"
        android:text="@string/sms"
        android:textColor="#D4D4D4" />
    <ImageButton
        android:id="@+id/ibHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tgState"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/cbSms"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/about"
        android:text="@string/sms"
        android:textColor="#D4D4D4"  />

    <com.iitg.call.manager.Switch
        android:id="@+id/tgState"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        app:textLeft="@string/on"
        app:textRight="@string/off" />

</RelativeLayout>